# chinese-checkers

./: .gitignore  CMakeLists.txt  README.md
misc/: Info.plist  chinesecheckers.icns  chinesecheckers.rc
scripts/: genconstants.py  genicons.sh  genpiecepositions.py  genzobrist.py
src/: book.hpp  cache.hpp  cli.cpp  constants.hpp  game.cpp  game.hpp  server.cpp  table.cpp  table.hpp  transtable.cpp  transtable.hpp  wasm.cpp
src/book/: bookmaker.cpp
src/gui/: gui.cpp  utils.cpp  utils.hpp
src/gui/fonts/: RubikMonoOne-Regular.h  icon.h
src/gui/widgets/: Fl_ChessBoard.cpp  Fl_ChessBoard.hpp  Fl_IconButton.cpp  Fl_IconButton.hpp
tests/: a.txt  b.txt  c.txt
wasm/: CMakeLists.txt  wasm.cpp
web/: game.js  index.css  index.html  index.js  svg.css  svg.js  sw.js  worker.js
